--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
+    <AssemblyVersion>2020.2.4.1855</AssemblyVersion>
     <PublishUrl>C:\Users\ksjenger\Desktop\IntegradorVippWebService\Install\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -40,7 +41,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -74,13 +75,13 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>logo_visualset5_KbN_icona.ico</ApplicationIcon>
+    <ApplicationIcon>Visualset.IntegradorWebService.View\Resources\logo_visualset5_KbN_icona.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService_4_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>IntegradorWebService.Visualset.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -135,46 +136,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExcelServices\GravaRetornoExcel.cs" />
-    <Compile Include="Forms\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ExcelServices\FormatacaoPlanilha.cs" />
-    <Compile Include="Forms\Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Rest\JsonRetornoLogar.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\ExcelServices\GravaRetornoExcel.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\ExcelServices\CarregaFormatacao.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\ProcessaListaDeFormatacao.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\TrataRetorno.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\Datum.cs" />
+    <Compile Include="Visualset.IntegradorWebService.View\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visualset.IntegradorWebService.View\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visualset.IntegradorWebService.Entities\FormatacaoPlanilha.cs" />
+    <Compile Include="Visualset.IntegradorWebService.View\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visualset.IntegradorWebService.View\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visualset.IntegradorWebService.Entities\JsonRetornoLogar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ExcelServices\ProcessaPlanilha.cs" />
-    <Compile Include="Rest\JsonRetornoPerfil.cs" />
-    <Compile Include="Rest\Logar.cs" />
-    <Compile Include="Rest\RestPerfilImportacao.cs" />
-    <Compile Include="VIPP\PerfilImportacao.cs" />
-    <Compile Include="VIPP\Retorno.cs" />
-    <Compile Include="VIPP\RetornoInvalida.cs" />
-    <Compile Include="VIPP\RetornoValida.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\ExcelServices\ProcessaPlanilha.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\Rootobject.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\Rest\Logar.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Services\Rest\RestPerfilImportacao.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\PerfilImportacao.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\Retorno.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\RetornoInvalida.cs" />
+    <Compile Include="Visualset.IntegradorWebService.Entities\RetornoValida.cs" />
     <Compile Include="Web References\WSVIPP\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
-    <Compile Include="VIPP\PostarObjeto.cs" />
-    <EmbeddedResource Include="Forms\Form1.resx">
+    <Compile Include="Visualset.IntegradorWebService.Services\PostarObjetoVIPP.cs" />
+    <EmbeddedResource Include="Visualset.IntegradorWebService.View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Login.resx">
+    <EmbeddedResource Include="Visualset.IntegradorWebService.View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -182,7 +187,10 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="IntegradorWebService.Visualset.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -193,7 +201,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Visualset.IntegradorWebService_4_TemporaryKey.pfx" />
+    <None Include="Visualset.IntegradorWebService.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
@@ -227,7 +235,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 e x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -250,18 +258,16 @@
     </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo-visualset.png" />
+    <None Include="Visualset.IntegradorWebService.View\Resources\logo-visualset.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Open.png" />
+    <None Include="Visualset.IntegradorWebService.View\Resources\Open.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Send.png" />
+    <Content Include="Visualset.IntegradorWebService.View\Resources\logo-visualset5.ico" />
+    <Content Include="Visualset.IntegradorWebService.View\Resources\logo_visualset5_KbN_icona.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="logo-visualset5.ico" />
-    <Content Include="logo_visualset5_KbN_icona.ico" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
