--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -63,10 +63,10 @@
     <StartupObject>IntegradorWebService.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>92964341C2146A82C9E0827B7B9DE6E1A0ABC8C8</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>CAB401E269E674E1EE1E17F519E822F11857C284</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Visualset.IntegradorWebService_4_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Visualset.IntegradorWebService_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -75,13 +75,13 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Visualset.IntegradorWebService.View\Resources\logo_visualset5_KbN_icona.ico</ApplicationIcon>
+    <ApplicationIcon>View\Resources\logo_visualset5_KbN_icona.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>IntegradorWebService.Visualset.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -145,41 +145,31 @@
     <Compile Include="Visualset.IntegradorWebService.Services\ExcelServices\CarregaFormatacao.cs" />
     <Compile Include="Visualset.IntegradorWebService.Services\ProcessaListaDeFormatacao.cs" />
     <Compile Include="Visualset.IntegradorWebService.Services\TrataRetorno.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\Datum.cs" />
-    <Compile Include="Visualset.IntegradorWebService.View\Form1.cs">
+    <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Visualset.IntegradorWebService.View\Form1.Designer.cs">
+    <Compile Include="View\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Visualset.IntegradorWebService.Entities\FormatacaoPlanilha.cs" />
-    <Compile Include="Visualset.IntegradorWebService.View\Login.cs">
+    <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Visualset.IntegradorWebService.View\Login.Designer.cs">
+    <Compile Include="View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Visualset.IntegradorWebService.Entities\JsonRetornoLogar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visualset.IntegradorWebService.Services\ExcelServices\ProcessaPlanilha.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\Rootobject.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Services\Rest\Logar.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Services\Rest\RestPerfilImportacao.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\PerfilImportacao.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\Retorno.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\RetornoInvalida.cs" />
-    <Compile Include="Visualset.IntegradorWebService.Entities\RetornoValida.cs" />
     <Compile Include="Web References\WSVIPP\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="Visualset.IntegradorWebService.Services\PostarObjetoVIPP.cs" />
-    <EmbeddedResource Include="Visualset.IntegradorWebService.View\Form1.resx">
+    <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Visualset.IntegradorWebService.View\Login.resx">
+    <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -202,6 +192,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Visualset.IntegradorWebService.pfx" />
+    <None Include="Visualset.IntegradorWebService_TemporaryKey.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
@@ -258,16 +249,28 @@
     </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Visualset.IntegradorWebService.View\Resources\logo-visualset.png" />
+    <None Include="View\Resources\logo-visualset.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Visualset.IntegradorWebService.View\Resources\Open.png" />
+    <None Include="View\Resources\Open.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Visualset.IntegradorWebService.View\Resources\logo-visualset5.ico" />
-    <Content Include="Visualset.IntegradorWebService.View\Resources\logo_visualset5_KbN_icona.ico" />
+    <Content Include="View\Resources\logo-visualset5.ico" />
+    <Content Include="View\Resources\logo_visualset5_KbN_icona.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Visualset.IntegradorWebService.Entities\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Visualset.IntegradorWebService.Entities\Visualset.IntegradorWebService.Entities.csproj">
+      <Project>{8fc834c0-9f1d-42e5-b085-a992dea3618a}</Project>
+      <Name>Visualset.IntegradorWebService.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Visualset.IntegradorWebService.Facade\Visualset.IntegradorWebService.Facade.csproj">
+      <Project>{64b41c05-69f9-4fb2-bb20-e2368eda163e}</Project>
+      <Name>Visualset.IntegradorWebService.Facade</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
